# CTSegmentator

./: README.md  environment.yaml  pyproject.toml
CTSegmentator/: cli.py  config.py  inference.py  post_processing.py  python_api.py  run_inference.py
ctsegmentator/: cli.py  download_weights.py  post_processing.py  python_api.py  run_inference.py
nnunetv2/: paths.py
nnunetv2/inference/: predict_from_raw_data.py
nnunetv2/training/loss/: compound_losses.py
nnunetv2/training/nnUNetTrainer/: nnUNetTrainer_DC_CE_topk_loss.py
