[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CTSegmentator"
version = "0.0.1"
description = "CT Auto-Segmentation Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Saffi Hunt" }
]
dependencies = [
    "torch>=2.1.2",
    "numpy<2",
    "SimpleITK",
    "nibabel>=2.3.0",
    "tqdm>=4.45.0",
    "p_tqdm",
    "xvfbwrapper",
    "nnunetv2>=2.2.1",
    "requests==2.27.1; python_version<'3.10'",
    "requests; python_version>='3.10'",
    "rt_utils",
    "dicom2nifti",
    "pyarrow",
    "pydicom",
]

[project.scripts]
psma-segmentator = "psma_segmentator.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/psma_segmentator"
"Repository" = "https://github.com/yourusername/psma_segmentator"
"Bug Tracker" = "https://github.com/yourusername/psma_segmentator/issues"