[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CTSegmentator"
version = "0.0.1"
description = "CT Auto-Segmentation Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Saffi Hunt" }
]
dependencies = [
    "torch>=2.1.2",   
    "pydicom",
    "pathlib",
    "acvl_utils",
    "tqdm",
    "dynamic_network_architectures",
    "batchgeneratorsv2",
    "matplotlib",
    "seaborn",
    
]

[project.scripts]
ct-segmentator = "CTSegmentator.cli:main"
