[tool.poetry]
name = "ctsegmentator"
version = "0.0.1"
description = "CT Auto-Segmentation Tool"
authors = ["Saffi Hunt"]
readme = "README.md"
packages = [{ include = "ctsegmentator" }]
  
[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.1.2"
pydicom = "*"
acvl_utils = "*"
tqdm = "*"
dynamic_network_architectures = "*"
batchgeneratorsv2 = "*"
matplotlib = "*"
seaborn = "*"
blosc2 = "*"
nibabel = "*"

[tool.poetry.scripts]
ct-segmentator = "ctsegmentator.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"